[gd_scene load_steps=10 format=3 uid="uid://byq6te8x2cgls"]

[ext_resource type="Script" uid="uid://xt4r8pvo1y6d" path="res://src/Game/Game.gd" id="1_62xe8"]
[ext_resource type="Texture2D" uid="uid://224vv4sesa2v" path="res://assets/images/gameBG.png" id="2_vicne"]
[ext_resource type="PackedScene" uid="uid://c073rwhcnpodn" path="res://src/Game/Snake/Snake.tscn" id="3_mne51"]
[ext_resource type="PackedScene" uid="uid://s4l216a8k542" path="res://src/Game/Apple/Apple.tscn" id="4_kun0h"]
[ext_resource type="FontFile" uid="uid://brsbkqea30ixk" path="res://assets/fonts/Kenney Bold.ttf" id="5_4eicg"]
[ext_resource type="Texture2D" uid="uid://cc6usmrr128jq" path="res://assets/images/BG.png" id="5_4mayo"]
[ext_resource type="Texture2D" uid="uid://bd8dhh6gsvig3" path="res://assets/images/blueBtnTapped.png" id="7_mdt6g"]
[ext_resource type="AudioStream" uid="uid://bjiamstei38q5" path="res://assets/audio/gameOver.mp3" id="8_m0hqv"]
[ext_resource type="AudioStream" uid="uid://dg50le446esxw" path="res://assets/audio/gameTheme.mp3" id="9_hehav"]

[node name="Game" type="Node2D"]
script = ExtResource("1_62xe8")

[node name="GameBG" type="Sprite2D" parent="."]
texture = ExtResource("2_vicne")
centered = false
offset = Vector2(0, 200)

[node name="Snake" parent="." node_paths=PackedStringArray("apple_tilemap") instance=ExtResource("3_mne51")]
tile_map_data = PackedByteArray(0, 0, 9, 0, 9, 0, 0, 0, 0, 0, 0, 0, 0, 0)
apple_tilemap = NodePath("../Apple")

[node name="Apple" parent="." instance=ExtResource("4_kun0h")]

[node name="TimeTimer" type="Timer" parent="."]
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Panel" type="TextureRect" parent="UI/Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
texture = ExtResource("5_4mayo")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/Panel"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 0
offset_right = 426.0
offset_bottom = 200.0
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="ScoreLabel" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "Score  0"
horizontal_alignment = 1

[node name="HiLabel" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "HI Score  0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "Time  0"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Control/Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Help1" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "R  Restart"
horizontal_alignment = 1

[node name="Help2" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "Q   Quit"
horizontal_alignment = 1

[node name="Help3" type="Label" parent="UI/Control/Panel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "M   Mute"
horizontal_alignment = 1

[node name="GameOverPanel" type="TextureRect" parent="UI/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_mdt6g")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -161.0
offset_right = 234.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="UI/Control/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewScore" type="Label" parent="UI/Control/GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(469, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "You set a new high score!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Instructions" type="Label" parent="UI/Control/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(469, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4eicg")
theme_override_font_sizes/font_size = 24
text = "Hit 'R' To restart
Or Hit 'q' To quit"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Audio" type="Node" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("8_m0hqv")
bus = &"SFX"

[node name="GameTheme" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("9_hehav")
bus = &"Music"

[connection signal="apple_hit" from="Snake" to="." method="_on_snake_apple_hit"]
[connection signal="apple_hit" from="Snake" to="Apple" method="_on_snake_apple_hit"]
[connection signal="game_over" from="Snake" to="." method="_on_snake_game_over"]
[connection signal="game_over" from="Snake" to="Apple" method="_on_snake_game_over"]
[connection signal="score_increased" from="Apple" to="." method="_on_apple_score_increased"]
[connection signal="timeout" from="TimeTimer" to="." method="_on_time_timer_timeout"]
